--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,6 +15,7 @@
     <h3>3. Data Sharing</h3>
     <p>We do not sell your personal data. Your information is shared only with the healthcare provider you are registered with.</p>
     <h3>4. Contact Us</h3>
-    <p>If you have questions, contact us at: <b>kalatturpriyanka17@gmail.com</b></p>
+    <p>If you have questions, contact us at: <b>kalathurpriyanka@gmail.com</b></p>
 </body>
 </html>
+
