--- a/delete-data.html
+++ b/delete-data.html
@@ -8,6 +8,6 @@
     <h1>Request Data Deletion</h1>
     <p>If you wish to delete your <b>PregSafe Health Monitor</b> account and all associated data, you can do so easily.</p>
     <h3>How to Request Deletion</h3>
-    <p>Email us at <b>kalatturpriyanka17@gmail.com</b> with the subject: "Data Deletion Request". Include your registered username or email. We will delete all records within 7 business days.</p>
+    <p>Email us at <b>kalathurpriyanka@gmail.com</b> with the subject: "Data Deletion Request". Include your registered username or email. We will delete all records within 7 business days.</p>
 </body>
 </html>
